# switchbot-devices-controller

./: .gitignore  LICENSE  README.md  close_curtain.py  models.py  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  tests.yml
api/: __init__.py  bitmeister.py  switchbot.py
aws/: cloudformation.py  s3.py
cloudformation/: close_curtain.yml  configure_aws_credentials.yml
curtain/: README.md  main.py  models.py  schedule_expression.py  timezone.py
curtain/api/: bitmeister.py  switchbot.py
github/: repos.py
misc/: hasher.py  schedule_expression.py  zipper.py
tests/: conftest.py
tests/curtain/: test_models.py  test_schedule_expression.py
tests/fixtures/: sun_moon_rise_set.json  sun_rise_set.json
tests/misc/: test_hasher.py  test_schedule_expression.py
tests/models/: test_cloud_formation_parameter.py  test_sun_moon_rise_set.py
